# ozon_test

./: .flake8  .gitignore  pyproject.toml
app/: main.py  schemas.py  test_main.py
backend/: Dockerfile  requirements.txt
backend/app/: main.py  test_main.py
infra/: docker-compose.yml
infra/nginx/: default.conf
